notebook update; add missing POSANG header

--- a/notebooks/MMT API.ipynb
+++ b/notebooks/MMT API.ipynb
@@ -63,22 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'wfs_raw_seeing': 'N/A'}"
+       "{'wfs_seeing': 1.51}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_api('wfs_raw_seeing')"
+    "get_api('wfs_seeing')"
    ]
   },
   {
